fix footer spacing css so that footer is more responsive (#973)
* fix footer spacing css so that it's more responsive

* whoops there shouldn't be a package lock in here

--- a/themes/openaq/assets/scss/_footer.scss
+++ b/themes/openaq/assets/scss/_footer.scss
@@ -1,30 +1,30 @@
-@use 'openaq-design-system/variables';
+@use "openaq-design-system/variables";
 
 .footer {
-  height: 250px;
-  width: 100%;
   background-color: variables.$lavender180;
   align-items: center;
   color: white;
 
   &__content {
-    height: 196px;
     display: flex;
-    flex-direction: row;
-    align-items: center;
     justify-content: space-between;
-    padding: 0 150px;
-    gap: 20px;
+    gap: 32px;
+    padding: 24px 80px;
 
     .nav-section {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      gap: 24px;
+
       .footer-logo {
         width: 90px;
         height: auto;
       }
+
       .footer-nav {
         display: flex;
         flex-direction: row;
-        margin-top: 36px;
         gap: 24px;
       }
     }
@@ -33,24 +33,33 @@
       display: flex;
       flex-direction: column;
       gap: 12px;
+      margin: 0;
+
+      .social-links {
+        flex-wrap: wrap;
+      }
 
       .subscribe-form {
         display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
         gap: 10px;
+
+        input {
+          width: 180px;
+        }
       }
     }
   }
 
   .sub-footer {
-    width: 100%;
-    height: 54px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
 
     border-top: 1px solid variables.$sky120;
-    padding: 0 150px;
+    padding: 24px 80px;
 
     &-nav {
       display: flex;
@@ -63,6 +72,7 @@
         padding: 0 80px;
         justify-content: center;
         align-items: center;
+
         .copyright {
           order: 1;
         }
@@ -70,10 +80,26 @@
     }
   }
 
-  @media (max-width: 1000px) {
+  @media (max-width: 1180px) {
     & {
       &__content {
-        padding: 0 15px;
+        .nav-section {
+          justify-content: space-between;
+        }
+
+        .contact-section {
+          justify-content: space-between;
+
+          .subscribe-form {
+            display: flex;
+            flex-direction: column;
+            align-items: left;
+
+            input {
+              width: 100%;
+            }
+          }
+        }
       }
     }
   }
@@ -81,12 +107,10 @@
   @media (max-width: 800px) {
     & {
       box-sizing: border-box;
-      height: 660px;
 
       &__content {
-        padding: 40px 0 0 0;
+        padding: 40px 24px 0 24px;
 
-        height: 580px;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
@@ -105,15 +129,27 @@
         }
 
         .contact-section {
-          align-items: center;
           display: flex;
+          justify-content: center;
+          align-items: center;
           flex-direction: column;
-          order: -1;
-        }
-      }
+          order: 1;
 
-      .sub-footer {
-        height: 80px;
+          .subscribe-form {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            input {
+              width: 300px;
+            }
+          }
+
+          .social-links {
+            margin-bottom: 24px;
+            justify-content: center;
+          }
+        }
       }
     }
   }
